fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -403,7 +403,7 @@ blockquote p::after {
 #nickandmal .tastingSection {
   padding-left: 150px;
   padding-right: 150px;
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
 }
 
 #nickandmal hr {
@@ -437,6 +437,11 @@ blockquote p::after {
   line-height: 30px;
   /* padding-left: 60px;
   padding-right: 60px; */
+}
+
+#nickandmal .infotext-p {
+  margin: auto;
+  width: 65%;
 }
 
 #nickandmal .infoText {
